[tool.poetry]
name = "ya-django-toolkit-jp"
version = "0.0.0"
description = "日本語（マルチバイト文字）の考慮も入れた Django プロジェクトのためのユーティリティです。"
authors = ["yk-lab a.k.a YetAnother_yk <yk-lab@users.noreply.github.com>"]
homepage = "https://github.com/yk-lab"
repository = "https://github.com/yk-lab/ya-django-toolkit-jp"
documentation = "https://github.com/yk-lab/ya-django-toolkit-jp"
readme = "README.md"
packages = [{include = "ya_django_toolkit_jp"}]
license = "MIT"
include = ["CHANGELOG.md"]

[tool.poetry-git-version-plugin]
make_alpha_version = true
alpha_version_format = '{version}a{distance}+{commit_hash}'

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
flake8-isort = "^6.0.0"
autopep8 = "^2.0.2"
pre-commit = "^3.3.2"
types-backports = "^0.1.3"
django-types = "^0.17.0"
mypy = "^1.3.0"
safety = "^2.3.5"


[tool.poetry.group.all.dependencies]
ulid-py = "^1.1.0"
django-boost = "^2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
